search for artist now i hours

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 build/
 Tkinter-Designer/
 __pycache__/
+StreamingHistory0DEC.JSON
+StreamingHistory1DEC.JSON
+StreamingHistory2DEC.JSON
+StreamingHistory3DEC.JSON
+StreamingHistoryUpdated.JSON
